--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
                 [routerLink]="['/']"
               >
                 <!-- <span class="text-[#242528] text-2xl font-bold mr-2">⦿</span> -->
-                <span class="text-white font-extrabold text-lg">SÍMBÍÀTÚÚ</span>
+                <span class="text-white font-extrabold text-2xl">SÍMBÍÀTÚÚ</span>
               </div>
               <!-- <img
                 class="h-8 w-auto"
