--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,6 +9,7 @@
                 class="flex items-center cursor-pointer"
                 [routerLink]="['/']"
               >
+                <!-- <span class="text-[#242528] text-2xl font-bold mr-2">⦿</span> -->
                 <span class="text-white font-extrabold text-2xl">SÍMBÍÀTÚÚ</span>
               </div>
               <!-- <img
@@ -140,14 +141,14 @@
   >
     Services
   </a>
-  <!-- <a
-    class="text-[#ffbd59] hover:text-white px-3 py-2 rounded-md text-sm font-medium"
-    [routerLink]="['/careers']"
+   <a
+    class="text-white hover:text-[#c86635] px-3 py-2 rounded-md text-sm font-medium"
+    [routerLink]="['/pricing']"
     routerLinkActive="active"
   >
-    Careers
+    Pricing
   </a>
-  <a
+  <!--<a
     class="text-[#ffbd59] hover:text-white px-3 py-2 rounded-md text-sm font-medium"
     [routerLink]="['/clients']"
     routerLinkActive="active"
