--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -4,7 +4,7 @@
   <div class="gradent-right absolute w-fit h-fit md:h-[454px] md:w-[440px]"></div>
   <div class="max-w-4xl mx-auto text-center mb-10">
     <h2 class="text-3xl font-bold mb-2">Frequently asked questions</h2>
-    <p class="text-gray-600">How Stackmatix can benefit your business</p>
+    <p class="text-gray-600 capitalize">How SÍMBÍÀTÚÚ can benefit your business</p>
   </div>
 
   <div class="max-w-4xl mx-auto space-y-4">
