--- a/src/app/page/serivce/serivce.component.html
+++ b/src/app/page/serivce/serivce.component.html
@@ -69,15 +69,87 @@
     </div>
   </header>
 
+  <main class="flex flex-col lg:flex-row max-w-7xl mx-auto py-10 px-4 sm:px-6 lg:px-8 gap-8 pt-20 relative">
+    <section class="mb-10">
+      <h2 class="text-xl sm:text-2xl font-bold mb-4 text-[#0f0f0f]">
+        👉 Affiliate Storytelling That Converts
+      </h2>
+      <p class="text-[#0f0f0f] mt-4 text-sm sm:text-base">
+        I specialise in creating powerful affiliate content that builds trust
+        and drives sales. My focus is simple: story-driven content that makes
+        audiences stop, connect, and click “buy.”
+      </p>
+      <p class="text-[#0f0f0f] mt-4 text-sm sm:text-base">
+        No technical overwhelm. No messy recruitment. Just content that feels
+        authentic, human, and tailored to your sector—tech, hospitality,
+        fashion, lifestyle, non-profits, real estate, health & wellness,
+      </p>
+      <p class="text-[#0f0f0f] mt-4 text-sm sm:text-base mb-6">
+        <strong>Here’s how I support your journey:</strong>
+      </p>
+
+      <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+        <div class="bg-white p-4 rounded-lg shadow hover:shadow-lg">
+          <h3 class="text-lg font-bold flex items-center gap-2 text-[#0f0f0f]">
+            <i class="fas fa-laptop-code text-[#9a7aa4]"></i>
+            Affiliate Content & Storytelling
+          </h3>
+          <div class="space-y-3 lg:space-y-4">
+            @for (feature of features; track feature) {
+            <div class="flex items-start gap-3 lg:gap-4">
+              <div
+                class="w-2 h-2 bg-gray-600 rounded-full mt-2 flex-shrink-0"
+              ></div>
+              <p class="text-base sm:text-sm text-gray-600 leading-relaxed">
+                {{ feature }}
+              </p>
+            </div>
+            }
+          </div>
+          <!-- <p class="text-sm text-gray-400 mt-2">
+          Let me help you get visibility fast. With unattached affiliate
+          marketing, I promote your products directly through ads and
+          placements, reaching fresh audiences beyond my network. No waiting, no
+          extra layers just pure exposure that drives clicks, traffic, and sales
+          at scale.
+        </p> -->
+        </div>
+        <div class="bg-white p-4 rounded-lg shadow hover:shadow-lg">
+          <h3 class="text-lg font-bold flex items-center gap-2 text-[#0f0f0f]">
+            <i class="fas fa-code text-yellow-400"></i>
+            Performance & Optimization
+          </h3>
+          <div class="space-y-3 lg:space-y-4">
+            @for (feature of performance ; track feature) {
+            <div class="flex items-start gap-3 lg:gap-4">
+              <div
+                class="w-2 h-2 bg-gray-600 rounded-full mt-2 flex-shrink-0"
+              ></div>
+              <p class="text-base sm:text-sm text-gray-600 leading-relaxed">
+                {{ feature }}
+              </p>
+            </div>
+            }
+          </div>
+          <!-- <p class="text-sm text-gray-400 mt-2">
+          Let me connect your products with the right audience. By aligning your
+          brand with content in your niche, I create authentic recommendations
+          that naturally fit what my audience is already searching for. The
+          result? More trust, more relevance, and more conversions.
+        </p> -->
+        </div>
+      </div>
+    </section>
+  </main>
+
   <app-services></app-services>
 
-  <section class="px-4 py-12 max-w-7xl mx-auto">
+  <!-- <section class="px-4 py-12 max-w-7xl mx-auto">
     <div class="mb-8">
       <h2 class="text-3xl font-semibold text-white mb-2">
         Our other Business Highlights
       </h2>
 
-      <!-- Filters -->
       <div class="flex flex-wrap items-center gap-3 my-4">
         @for (cat of categories; track cat) {
         <button
@@ -95,7 +167,6 @@
       </div>
     </div>
 
-    <!-- Grid -->
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
       @for (study of filteredStudies; track study.title) {
       <div
@@ -119,7 +190,7 @@
       </div>
       }
     </div>
-  </section>
+  </section> -->
   <app-streamline></app-streamline>
   <app-testimonials></app-testimonials>
 
